# TrabzonCaydanligi_sh0

./: README.md
00-Proje/: CMakeLists.txt  README.md
00-Proje/kod/src/: main.cpp
01-SDL Kurulumu/: README.md
01-SDL Kurulumu/kod/src/: main.cpp
02-TemelYapi/: README.md
02-TemelYapi/kod/: CMakeLists.txt
02-TemelYapi/kod/src/: main.cpp
02-TemelYapi/ornek/: diziDonusumu.pde
03-Cizgi Algoritmalari/: README.md
03-Cizgi Algoritmalari/src/: main.cpp
03-Cizimler/: README.md
03-Vektorler/: README.md  ornek.pde
04-Cizgi Algoritmalari/: README.md
04-Cizgi Algoritmalari/kod/src/: main.cpp
05-Temel Cisimler/: README.md
05-Temel Cizimler ve Yapi Guncellemesi/: README.md
05-Temel Cizimler ve Yapi Guncellemesi/kod/src/: Graphics.cpp  Graphics.h  main.cpp
06-Vektorler/: README.md
06-Vektorler/kod/src/: Graphics.h  Vector2.cpp  Vector2.h  main.cpp
06-Vektorler/ornek/: toplama.pde
07-Donen Seyler/: README.md
08-Imgui/: README.md
09-2D Kamera/: README.md
10-Perspektif Nokta Bulutu/: README.md
11-OpenGL/: README.md
11-OpenGL/kod/: CMakeLists.txt
12-OBJ dosyasi/: README.md
16-Imgui v0.2/: CMakeLists.txt
Bolum-0/00-Proje/: README.md
Bolum-0/01-SDL Kurulumu/: README.md
Bolum-0/01-Temel Yapi/: README.md
Bolum-0/02-Piksel Cizimleri/: README.md
Bolum-0/02-Temel Yapi/: README.md
Bolum-0/03-Cizgi Algoritmalari/: README.md
Bolum-0/03-Piksel Cizimleri/: README.md
Bolum-0/04-Cizgi Algoritmalari/: README.md
Bolum-0/05-Temel Cizimler ve Yapi Guncellemesi/: README.md
Bolum-0/06-Vektorler/: README.md
Bolum-0/07-Donen Seyler/: README.md
Bolum-0/08-Imgui/: README.md
Bolum-0/09-Perspektif Nokta Bulutu/: README.md
Bolum-0/10-KupCizimi/: README.md
Bolum-0/11-Dolu Ucgen Cizimi/: README.md
Bolum-0/11-OBJ dosyasi/: README.md
Bolum-0/12-Delta-t/: README.md
Bolum-0/12-OBJ dosyasi/: README.md
Bolum-0/13-Delta-t/: README.md
Bolum-0/13-Isik/: README.md
Bolum-0/14-Derinlik/: README.md
Bolum-0/14-Isik/: README.md
Bolum-0/15-Derinlik/: README.md
Bolum-0/15-Kamera/: README.md
Bolum-0/16-Kamera/: README.md
Bolum-0/16-Kirpmalar/: README.md
Bolum-0/17-Kirpmalar/: README.md
Bolum-1/13-ObjLoader/: README.md
Bolum-1/13-OpenGL/: README.md
Bolum-1/14-Arka Yuzey Elemesi/: README.md
Bolum-1/14-Dolu Ucgen Cizimi/: README.md
Bolum-1/17-Renkli Kup/: README.md
Bolum-1/99-OpenGL/: README.md
libs/imgui-docking/: CMakeLists.txt
modeller/: kup.mtl
(+120 files in other folders)
